external-crates/move/crates/move-compiler/tests/move_2024/naming/lambda_shadows_function.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_2024/naming/lambda_shadows_function.move:4:22
  │
4 │     macro fun do<$T>(f: || -> $T): $T {
  │                      ^ Unused parameter 'f'. Consider removing or prefixing with an underscore: '_f'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E02010]: invalid name
  ┌─ tests/move_2024/naming/lambda_shadows_function.move:4:22
  │
4 │     macro fun do<$T>(f: || -> $T): $T {
  │     -----            ^ Invalid parameter name 'f'. 'macro' parameter names must start with '$' (or must be '_')
  │     │                 
  │     Declared 'macro' here
  │
  = 'macro' parameters start with '$' to indicate that their arguments are not evaluated before the macro is expanded, meaning the entire expression is substituted. This is different from regular function parameters that are evaluated before the function is called.
